--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -6,8 +6,6 @@
 	<script src="classes.js" type="text/javascript"></script> 
 </head>
 <body>
-	myItem = new Item(true, 2.25, "icecream");
-	label = myItem.toString()
-	<p> label </p>
+	<h1 id="test"></h1>
 </body>
 </html>
